Bug 323861 - whish: suggest URL the file comes from as default for "Save local copy"
Summary: whish: suggest URL the file comes from as default for "Save local copy"
Status: RESOLVED FIXED
Alias: None
Product: kte-collaborative
Classification: Unmaintained
Component: General (other bugs)
Version First Reported In: pre-0.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Sven Brauch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-21 20:02 UTC by Sven Brauch
Modified: 2013-08-22 18:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Brauch 2013-08-21 20:02:55 UTC
When a file is shared, its previous URL should be suggested as the default in the "Save local copy" save dialog.

Reproducible: Always
Comment 1 Sven Brauch 2013-08-22 18:14:30 UTC
Git commit 5aebeac47fc577115a852564628e17421555a6a1 by Sven Brauch.
Committed on 22/08/2013 at 18:14.
Pushed by brauch into branch 'master'.

Suggest the original URL of the document in the "save copy" dialog

hi apol

M  +5    -1    kte-plugin/kobbypluginview.cpp

http://commits.kde.org/kte-collaborative/5aebeac47fc577115a852564628e17421555a6a1