Suggest the original URL of the document in the "save copy" dialog

hi apol
BUG:323861